<resources>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_required">Permission required.</string>
    <string name="phone_sign_in">Sign In With Phone</string>
    <string name="email_sign_in">Sign In With Email</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Your Password?</string>
    <string name="status_sign_in_success">Sign-in Successful</string>
    <string name="status_sign_in_password_incorrect">Incorrect Password</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="running_code">Running code</string>
    <string name="vision_review_instructions">If this is the accurate recharge code, you can press done. If this recharge code is not accurate, you may edit it here.</string>
    <string name="code_input_instructions">Enter the recharge code below.</string>
    <string name="pref_key_group_recognized_text_in_blocks" translatable="false">grtib</string>
    <string name="pref_key_info_hide" translatable="false">ih</string>
    <string name="admob_app_id">ca-app-pub-7671905867026300~6551918211</string>
    <string name="adunitid_ciact">ca-app-pub-7671905867026300/4192831260</string>
    <string name="adunitid_pract">ca-app-pub-7671905867026300/5914651639</string>
    <string name="adunitid_rra">ca-app-pub-7671905867026300/2329085259</string>
    <string name="adunitid_ef">ca-app-pub-7671905867026300/7052279963</string>
    <string name="adunitid_sf">ca-app-pub-7671905867026300/3468258171</string>
    <string name="adunitid_sf_int">ca-app-pub-5127161627511605/6554467118</string>
    <string name="adunitid_pract_int">ca-app-pub-5127161627511605/8927614471</string>
    <string name="choose_messenger_instructions">Choose Any Default Phone Messenger (Except Facebook Messenger) To Complete</string>
    <string name="splash_screen_text">Recharge App</string>
    <string name="app_name">Recharge</string>
    <string name="main_title">Recharge</string>
    <string name="title_home">Home</string>
    <string name="main_menu">Main Menu</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="edit">Edit</string>
    <string name="default_bio">Hey there, I am a Sparks user.</string>
    <string name="hello_there">Hello there,</string>
    <string name="welcome_back">welcome back</string>
    <string name="to_recharge">to Recharge</string>
    <string name="header">Header</string>
    <string name="sign_in">Sign In</string>
    <string name="verify">Verify Code</string>
    <string name="verify_2">Verify</string>
    <string name="new_here">New here ? Sign Up instead</string>
    <string name="amount">ex. 1000 for N1000</string>
    <string name="airtime_balance">Check airtime balance</string>
    <string name="data_balance">Check data balance</string>
    <string name="bank_recharge">Recharge from bank</string>
    <string name="code_recharge">Recharge from code</string>
    <string name="buy_data">Buy Data Bundle</string>
    <string name="dstv_gotv_bill">Pay DSTV/GOTV Bill</string>
    <string name="electricity_bill">Pay Electricity Bill</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="create_pin">Create New Pin</string>
    <string name="error_enter_number">Enter Number</string>
    <string name="hint_pin">ex. 1234</string>
    <string name="send_code">Send Code</string>
    <string name="resend_code">Resend Code</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="check_account_number">Account Number?</string>
    <string name="airtime_phone_transfer">Airtime Transfer (Phone2Phone)</string>
    <string name="data_phone_gift">Buy Data Gift (Phone2Phone)</string>
    <string name="data_phone_transfer">Data Transfer (Phone2Phone)</string>
    <string name="bank_transfer">Bank Transfer (Bank2Bank)</string>
    <string name="airtime_bank_topup_transfer">Airtime TopUp (Bank2Phone)</string>
    <string name="username_exists">This username already exists.</string>
    <string name="google_sign_in_text">Continue with Google</string>
    <string name="twitter_sign_in_text">Continue with Twitter</string>
    <string name="offline_sign_in_text">Offline Sign In</string>
    <string name="take_another">Take another</string>
    <string name="finished">Finished</string>
    <string name="zero">0</string>
    <string name="unrecognized_images">Unrecognized</string>
    <string name="recognized_images">RECOGNIZED</string>
    <string name="see">See Unrecognized</string>
    <string name="view_image">View Image</string>
    <string name="loading_name">Loading Name&#8230;</string>
    <string name="getting_name">Getting name&#8230;</string>
    <string name="getting_username">Getting username&#8230;</string>
    <string name="network_prompt">Choose a network</string>
    <string name="bank_prompt">Choose associated bank</string>
    <string name="get_on_board">Get on Board</string>
    <string name="r_header">Registration Header</string>
    <string name="phone">Phone</string>
    <string name="phone1">Phone</string>
    <string name="phone2">Phone 2</string>
    <string name="phoneNumber01">Phone 1</string>
    <string name="network">Network</string>
    <string name="network01">Network 1</string>
    <string name="network2">Network 2</string>
    <string name="bank">Bank</string>
    <string name="add_friend">Add Friend</string>
    <string name="add">Add</string>
    <string name="remove_friends">Remove</string>
    <string name="complete_remove_friends">Complete</string>
    <string name="cancel_remove_friends">Cancel</string>
    <string name="expand">Expand</string>
    <string name="rearrange">Rearrange</string>
    <string name="friendPhone">Friend Phone</string>
    <string name="friend">Friend</string>
    <string name="friend1">Friend 1 Phone</string>
    <string name="friend2">Friend 2 Phone</string>
    <string name="friend3">Friend 3 Phone</string>
    <string name="friend4">Friend 4 Phone</string>
    <string name="friend5">Friend 5 Phone</string>
    <string name="friend6">Friend 6 Phone</string>
    <string name="friend7">Friend 7 Phone</string>
    <string name="friend8">Friend 8 Phone</string>
    <string name="friend9">Friend 9 Phone</string>
    <string name="friend10">Friend 10 Phone</string>
    <string name="menu_options_content_description">Menu Button To Access Options</string>
    <string name="menu_options_user_2_content_description">Menu Button To Access Options for user\'s second simcard</string>
    <string name="menu_options_friends_content_description">Menu Button To Access Options for Friend</string>
    <string name="optional">optional</string>
    <string name="optionalDualSim">optional for Dual Sim Card</string>
    <string name="mandatory">red = mandatory</string>
    <string name="optional_info">all other colors = optional</string>
    <string name="optional_explain">You can add optional info anytime after registration</string>
    <string name="optional_explain_edit">You can add optional info anytime</string>
    <string name="friend_phone1">Friend 1 Phone (ex. 0803&#8230;)</string>
    <string name="friend_phone2">Friend 2 Phone (ex. 0803&#8230;)</string>
    <string name="friend_phone3">Friend 3 Phone (ex. 0803&#8230;)</string>
    <string name="friend_phone4">Friend 4 Phone (ex. 0803&#8230;)</string>
    <string name="friend_phone5">Friend 5 Phone (ex. 0803&#8230;)</string>
    <string name="friend_phone6">Friend 6 Phone (ex. 0803&#8230;)</string>
    <string name="friend_phone7">Friend 7 Phone (ex. 0803&#8230;)</string>
    <string name="friend_phone8">Friend 8 Phone (ex. 0803&#8230;)</string>
    <string name="friend_phone9">Friend 9 Phone (ex. 0803&#8230;)</string>
    <string name="friend_phone10">Friend 10 Phone (ex. 0803&#8230;)</string>
    <string name="friend_phone_1">Phone 1 (ex. 08031234567)</string>
    <string name="friend_phone_2">Phone 2</string>
    <string name="friend_phone_3">Phone 3</string>
    <string name="friend_network_1">Network 1</string>
    <string name="friend_network_2">Network 2</string>
    <string name="friend_network_3">Network 3</string>
    <string name="friend_bank_1">Bank 1</string>
    <string name="friend_bank_2">Bank 2</string>
    <string name="friend_bank_3">Bank 3</string>
    <string name="friend_bank_4">Bank 4</string>
    <string name="friend_bank_5">Bank 5</string>
    <string name="friend_name">Friend Name</string>
    <string name="friend_name1">Friend 1 Name</string>
    <string name="friend_name2">Friend 2 Name</string>
    <string name="friend_name3">Friend 3 Name</string>
    <string name="friend_name4">Friend 4 Name</string>
    <string name="friend_name5">Friend 5 Name</string>
    <string name="friend_name6">Friend 6 Name</string>
    <string name="friend_name7">Friend 7 Name</string>
    <string name="friend_name8">Friend 8 Name</string>
    <string name="friend_name9">Friend 9 Name</string>
    <string name="friend_name10">Friend 10 Name</string>
    <string name="mPhone1">Number 1 (ex. 0803&#8230;)</string>
    <string name="mPhone2">Number 2 (ex. 0803&#8230;)</string>
    <string name="pin1">Pin 1 (ex. 1234)</string>
    <string name="pin2">Pin 2 (ex. 1234)</string>
    <string name="friend_account1">Friend Account Number 1</string>
    <string name="friend_account2">Friend Account Number 2</string>
    <string name="friend_account3">Friend Account Number 3</string>
    <string name="friend_account4">Friend Account Number 4</string>
    <string name="friend_account5">Friend Account Number 5</string>
    <string name="details">Details</string>
    <string name="change_password">Change Password</string>
    <string name="change_picture"> Change profile picture </string>
    <string name="save_details"> Save details </string>
    <string name="title_confirm_recover_password" translation_description="Password recovery confirmation message">Check your email</string>
    <string name="confirm_recovery_body" translation_description="Alert dialog displayed after password recovery email is sent">Follow the instructions sent to %1$s to recover your password.</string>
    <string name="password_recovery_body" translation_description="Password recovery message body">Get instructions sent to this email that explain how to
        reset your password.</string>
    <string name="email_hint" translation_description="Hint in email input field">Email</string>
    <string name="done"> Done </string>
    <string name="cross_check">Cross Check Detected Recharge #</string>
    <string name="enter_code">Enter Recharge #</string>
    <string name="show_more_details_content_description">Show More Button to show more details of a Friend in your friend\'s list</string>
    <string name="reorder_friend_content_description">Reorder Button to reorder the position of a Friend in your friend\'s list</string>
    <string name="add_friend_content_description">Plus Button To Add Friend From Phone Contacts List</string>
    <string name="add_one_more_friend_content_description">Plus Button To Add One More Friend to Form For Friend Details</string>
    <string name="add_friend1">Add Friend 1</string>
    <string name="add_friend2">Add Friend 2</string>
    <string name="amountRv">100</string>
    <string name="data">1.5 GB</string>
    <string name="valid">30 days</string>
</resources>