<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_menu_id"
    android:title="@string/main_menu"
    app:showAsAction="always"
    tools:context=".csUi.activities.MainActivity"
    tools:ignore="AlwaysShowAction">

    <group android:id="@+id/main_menu" >

        <item
            android:id="@+id/delete_account"
            android:icon="@drawable/ic_delete_forever_black_24dp"
            android:orderInCategory="100"
            android:title="@string/delete_account"
            app:showAsAction="never" />

        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_sign_out_24dp"
            android:orderInCategory="100"
            android:title="@string/sign_out"
            app:showAsAction="never" />

    </group>

</menu>