<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true" >

  <LinearLayout
      android:id="@+id/topLl"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="60dp"
        android:paddingBottom="60dp"
        android:text="@string/code_input_instructions"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/enter_recharge_code_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/enter_code"
        android:inputType="text" />

    <!--Button with id showInput-->



    <Button
        android:id="@+id/done_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/green"
        android:text="@string/done"
        android:textColor="@android:color/white" />



  </LinearLayout>

  <FrameLayout
      android:id="@+id/ciact_fl_adView"
      android:layout_width="320dp"
      android:layout_height="50dp"
      android:layout_gravity="center"
      android:layout_marginBottom="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ciact_adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/adunitid_ciact">
    </com.google.android.gms.ads.AdView>

  </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>