<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ej.recharge.ui.account.LoginActivityMain"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_background_color"
    style="@style/LoginAppTheme" >

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="00dp"
            android:background="@color/login_background_color">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    app:srcCompat="@drawable/recharge_app_name_921"
                    android:layout_gravity="center"/>

            </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/login_background_color">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hello_there"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/login"
                    android:text="@string/hello_there"
                    android:textColor="@color/login_text_color"
                    android:textSize="30sp"
                    tools:ignore="MissingPrefix" />

            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcome_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/login"
                    android:text="@string/welcome_back"
                    android:textColor="@color/login_text_color"
                    android:textSize="30sp"
                    tools:ignore="MissingPrefix" />

            </FrameLayout>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/to_recharge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/login"
                    android:text="@string/to_recharge"
                    android:textColor="@color/login_text_color"
                    android:textSize="30sp"
                    tools:ignore="MissingPrefix" />

            </FrameLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/login_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:background="@color/login_background_color">

            <TextView
                android:id="@+id/phone_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                style="@style/FirebaseUI.Button.AccountChooser.PhoneButton"
                android:text="@string/phone_sign_in"
                tools:ignore="UnusedIds" />

            <TextView
                android:id="@+id/email_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                style="@style/FirebaseUI.Button.AccountChooser.EmailButton"
                android:text="@string/email_sign_in"
                tools:ignore="UnusedIds" />

        </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
