<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true" >

  <LinearLayout
      android:id="@+id/topLl"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/activity_vertical_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="60dp"
        android:paddingBottom="60dp"
        android:text="@string/vision_review_instructions"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/cross_check_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/cross_check"
        android:inputType="text" />

    <!--Button with id showInput-->





    <Button
        android:id="@+id/done_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/green"
        android:text="@string/done"
        android:textColor="@android:color/white" />



  </LinearLayout>

  <LinearLayout
      android:id="@+id/rra_fl_adView"
      android:layout_width="320dp"
      android:layout_height="50dp"
      android:layout_gravity="center"
      android:layout_marginBottom="10dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:orientation="vertical" >

    <!--<com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rra_adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="@string/adunitid_rra">
    </com.google.android.gms.ads.AdView>-->

    <com.mopub.mobileads.MoPubView
        android:id="@+id/rra_moPubView"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:moPubAdSize="height_50" >
    </com.mopub.mobileads.MoPubView>

    <LinearLayout
        android:id="@+id/rra_banner"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" />

    <FrameLayout
        android:id="@+id/ironsSource_rra_banner_container"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom" />

  </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>