<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical"
    android:padding="@dimen/card_padding">

  <androidx.cardview.widget.CardView
      android:id="@+id/phoneCv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/layout_margin_scan"
      app:cardCornerRadius="@dimen/scan_card_radius"
      android:clickable="true"
      android:focusable="true"
      android:background="?selectableItemBackground"
      app:cardUseCompatPadding="true"
      app:cardElevation="@dimen/card_elevation_scan" >

    <LinearLayout
        android:id="@+id/phoneLLV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/card_color"
        android:orientation="vertical"
        android:paddingLeft="@dimen/main_card_padding"
        android:paddingTop="@dimen/main_card_padding"
        android:paddingRight="@dimen/main_card_padding"
        android:paddingBottom="@dimen/main_card_padding">

      <LinearLayout
          android:id="@+id/phoneLLH"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_gravity="end"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/myNumberTv"
            style="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/main_card_padding"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:text="My Number"
            android:textColor="@color/optional_text_color"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/menu1"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-40dp"
            android:layout_marginLeft="-40dp"
            android:background="@color/card_color"
            android:contentDescription="@string/menu_options_content_description"
            app:srcCompat="@drawable/ic_more_vert_any_color_24dp" />

      </LinearLayout>

      <TextView
          android:id="@+id/phoneTv"
          style="@style/Base.TextAppearance.AppCompat.Title"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingLeft="@dimen/main_card_padding"
          android:layout_marginEnd="70dp"
          android:layout_marginRight="70dp"
          android:text="@string/phone"
          android:textColor="@color/text_color"
          android:drawablePadding="5dp"
          app:drawableLeftCompat="@drawable/ic_baseline_call_24"
          app:drawableStartCompat="@drawable/ic_baseline_call_24" />

      <LinearLayout
          android:id="@+id/networkLLH"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingLeft="@dimen/main_card_padding"
          android:paddingBottom="@dimen/main_card_bottom_padding"
          android:layout_gravity="end"
          android:orientation="horizontal">

        <TextView
            android:id="@+id/networkTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/network_textview_box"
            android:padding="@dimen/network_textview_padding"
            android:text="@string/network"
            android:textColor="@color/text_color" />

      </LinearLayout>

    </LinearLayout>

  </androidx.cardview.widget.CardView>


</LinearLayout>